Adding Queries and Controllers for all entities

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 <h1>Hello Log</h1>
-<a href="http://localhost:8081/h2-console/">enter here to enter the Loggitor DB</a>
-
+<a href="http://localhost:8081/h2-console/">enter here to enter the Loggitor DB</a><br>
+<a href="http://localhost:8081/apps">Apps</a><br>
+<a href="http://localhost:8081/apps/log">Middle Table</a>
+<a href="http://localhost:8081/apps/defectApp">Left Table</a>
+<a href="http://localhost:8081/apps/defectSeverity">Left Table</a><br>
+<a href="http://localhost:8081/LogFile">LogFile</a><br>
+<a href="http://localhost:8081/defects">Defects</a><br>
+<a href="http://localhost:8081/defectsInstance">Defects Instance</a><br>
+<a href="http://localhost:8081/solution">Solutions</a><br>
 </body>
 </html>
