--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>Hello Log</h1>
+<a href="http://localhost:8081/api/">Projects APIs</a><br>
 <a href="http://localhost:8081/h2-console/">enter here to enter the Loggitor DB</a><br>
 <a href="http://localhost:8081/apps">Apps</a><br>
 <a href="http://localhost:8081/apps/log">Middle Table</a>
